# Bug_Walking

./: .gitignore  CMakeLists.txt  README.md
Assets/HUD/: Hearts.json
Assets/Levels/Level1-1/: level1-1.csv  level1-1.tmx
Assets/Levels/custom/: custom.csv  custom.tmx
Assets/Levels/level1/: dimensions.txt  facto_powerplant.tsx  level1.csv  level1.tmx  level2.tmx
Assets/Levels/level2/: dimensions.txt  level2.csv  level2.tmx
Assets/Levels/level3/: dimensions.txt  level3.csv  level3.tmx
Assets/Sprites/Blocks/: Block.json
Assets/Sprites/Boss/: Boss.json
Assets/Sprites/Chaser/: Chaser.json
Assets/Sprites/Elevator/: elevator.json
Assets/Sprites/Explotion/: Explotion.json
Assets/Sprites/GoldRing/: GoldRing.json
Assets/Sprites/Puff/: Puff.json
Assets/Sprites/Robot/: Robot.json
Assets/Sprites/RobotGunShot/: BasicShot.json  shoot.json
Assets/Sprites/SuperMario/: SuperMario.json
Assets/Sprites/Walker/: Walker.json
Shaders/: Base.frag  Base.vert
Source/: AudioSystem.cpp  AudioSystem.h  Game.cpp  Game.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Boss.cpp  Boss.h  BossBullet.cpp  BossBullet.h  Bullet.cpp  Bullet.h  Chaser.cpp  Chaser.h  ChaserSpawner.cpp  ChaserSpawner.h  Elevator.cpp  Elevator.h  GoldRing.cpp  GoldRing.h  Goomba.cpp  Goomba.h  Mario.cpp  Mario.h  Missile.cpp  Missile.h  Mushroom.cpp  Mushroom.h  RepairLevel.h  Robot.cpp  Robot.h  SmokeEffect.cpp  SmokeEffect.h  Spawner.cpp  Spawner.h  Walker.cpp  Walker.h  WalkerSpawner.cpp  WalkerSpawner.h
Source/Components/: ParticleSystemComponent.cpp  ParticleSystemComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VertexArray.cpp
Source/UI/: RepairGauge.cpp  RepairGauge.h  UIButton.cpp  UIImage.cpp  UIImage.h  UIRect.cpp  UIRect.h  UIText.cpp
Source/UI/Screens/: CrossFadeScreen.cpp  CrossFadeScreen.h  GameOver.cpp  HUD.cpp  HUD.h  IntroScene.cpp  IntroScene.h  MainMenu.cpp  PauseMenu.cpp  PauseMenu.h  UIScreen.cpp  Win.cpp  Win.h
